tests/errors/ConstantOneOverZero.java
class ConstantOneOverZero {
    int i = 1 / 0;
    int j = 1 % 0;
 }
